# discord-bot

./: .gitignore  CLAUDE.md  Dockerfile  code-simplicity.md  docker-compose.yml  pyproject.toml
.claude/: .gitignore
.claude/hooks/: format-and-lint.sh  protect-files.sh
.claude/memory/: MEMORY.md  feedback_cache_first_guild_lookup.md  feedback_config_permissions.md  feedback_cron_per_guild_isolation.md  feedback_early_returns.md  feedback_import_before_use.md  feedback_no_reexports_dry.md  feedback_staff_channel_mentions.md  feedback_state_before_side_effects.md
.claude/skills/ship-it/: SKILL.md
.github/workflows/: build.yaml
docs/superpowers/plans/: 2026-03-31-general-chat-channel-and-intros-naughty-list.md  2026-04-05-channel-cleanup-threads.md  2026-04-21-validation-member-leave-cleanup.md  2026-05-06-validation-timeout.md
docs/superpowers/specs/: 2026-03-31-general-chat-channel-and-intros-naughty-list-design.md  2026-04-05-channel-cleanup-threads-design.md  2026-04-21-validation-member-leave-cleanup-design.md  2026-05-06-validation-timeout-design.md
dragonpaw_bot/: bot.py  context.py  duration.py  http.py  logging.py  structs.py  utils.py
dragonpaw_bot/plugins/: birthdays.md  lobby.md  lobby.py  role_menus.md  role_menus.py  subday.md
dragonpaw_bot/plugins/activity/: CLAUDE.md  __init__.py  chart.py  commands.py  config.py  cron.py  listeners.py  models.py  state.py
dragonpaw_bot/plugins/birthdays/: CLAUDE.md  __init__.py  commands.py  config.py  constants.py  cron.py  listeners.py  models.py  state.py
dragonpaw_bot/plugins/channel_cleanup/: CLAUDE.md  __init__.py  config.py  cron.py  models.py  state.py
dragonpaw_bot/plugins/intros/: CLAUDE.md  __init__.py  commands.py  config.py  cron.py  listeners.py  models.py  state.py
dragonpaw_bot/plugins/media_channels/: CLAUDE.md  __init__.py  config.py  cron.py  listeners.py  models.py  state.py
dragonpaw_bot/plugins/role_menus/: CLAUDE.md  __init__.py  commands.py  config.py  constants.py  models.py  state.py
dragonpaw_bot/plugins/subday/: CLAUDE.md  __init__.py  chart.py  commands.py  config.py  constants.py  cron.py  models.py  prompts.py  scheduler.py  state.py
dragonpaw_bot/plugins/subday/weeks/: about.md  rules.md  week_01.md  week_02.md  week_03.md  week_04.md  week_05.md  week_06.md  week_07.md  week_08.md  week_09.md  week_10.md  week_11.md  week_12.md  week_13.md  week_14.md  week_15.md  week_16.md  week_17.md  week_18.md  week_19.md  week_20.md  week_21.md  week_22.md  week_23.md  week_24.md  week_25.md  week_26.md  week_27.md  week_28.md  week_29.md  week_30.md  week_31.md  week_32.md  week_33.md  week_34.md  week_35.md  week_36.md  week_37.md  week_38.md  (+14 more)
dragonpaw_bot/plugins/tickets/: CLAUDE.md  __init__.py  commands.py  config.py  models.py  state.py
dragonpaw_bot/plugins/validation/: CLAUDE.md  __init__.py  commands.py  config.py  cron.py  models.py  state.py
example-config/: config.toml  ogl.toml
scripts/: render_sample_charts.py
tests/: conftest.py  test_activity.py  test_bot.py  test_channel_cleanup.py  test_colors.py  test_context.py  test_duration.py  test_media_channels.py  test_purge_old_messages.py  test_role_menus.py  test_structs.py  test_subday_chart.py  test_subday_prompts.py  test_subday_state.py  test_tickets.py  test_utils.py  test_validation.py
tests/fixtures/: dragonpaw_gist.toml
